--- a/index.html
+++ b/index.html
@@ -808,7 +808,7 @@
         </div>
         
         <form id="consultation-form" action="https://formsubmit.co/terredesmysteres@gmail.com" method="POST" enctype="multipart/form-data">
-            <input type="hidden" name="_next" value="https://mrachamou.github.io/ifa-consultation/merci.html">
+            <input type="hidden" name="_next" id="redirect-url" value="https://mrachamou.github.io/ifa-consultation/merci.html">
             <input type="hidden" name="_captcha" value="false">
             <input type="hidden" name="_subject" value="Nouvelle demande de consultation Ifá">
             <input type="hidden" name="_template" value="table">
@@ -1811,4 +1811,3 @@
     </script>
 </body>
 </html>
-
