--- a/index.html
+++ b/index.html
@@ -807,11 +807,12 @@
             <p class="subtitle" id="subtitle">Découvrez votre destinée à travers la sagesse ancestrale yoruba</p>
         </div>
         
-        <form id="consultation-form" action="https://formsubmit.co/terredesmysteres@gmail.com" method="POST" enctype="multipart/form-data">
-            <input type="hidden" name="_next" id="redirect-url" value="https://mrachamou.github.io/ifa-consultation/merci.html">
-            <input type="hidden" name="_captcha" value="false">
-            <input type="hidden" name="_subject" value="Nouvelle demande de consultation Ifá">
-            <input type="hidden" name="_template" value="table">
+<form id="consultation-form" action="https://formsubmit.co/terredesmysteres@gmail.com" method="POST" enctype="multipart/form-data">
+    <input type="hidden" name="_next" id="redirect-url" value="https://mrachamou.github.io/ifa-consultation/merci.html">
+    <input type="hidden" name="_captcha" value="false">
+    <input type="hidden" name="_subject" value="Nouvelle demande de consultation Ifá">
+    <input type="hidden" name="_template" value="table">
+    <input type="hidden" name="_autoresponse" value="Merci pour votre demande, elle a bien été reçue.">
             
             <div class="form-group">
                 <label for="fullname" id="label-fullname">
